--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="true_button">True</string>
     <string name="false_button">FALSE</string>
     <string name="next_button">Next</string>
+    <string name="placeholder">Hello world this is where we are going to add the actual text to be shown!</string>
 </resources>
