--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="false_button">FALSE</string>
     <string name="next_button">Next</string>
     <string name="placeholder">Hello world this is where we are going to add the actual text to be shown!</string>
+    <string name="text_formatted">Question: %d/%d</string>
+    <string name="correct_answer">Correct</string>
+    <string name="incorrect_answer">Incorrect</string>
 </resources>
