--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="text_formatted">Question: %d/%d</string>
     <string name="correct_answer">Correct</string>
     <string name="incorrect_answer">Incorrect</string>
+    <string name="highest_score_text">Highest: %d</string>
 </resources>
